Fix banner text alignment: improve left, center, and right alignment consistency

--- a/assets/app.css
+++ b/assets/app.css
@@ -25,7 +25,7 @@
 .banners-container-slider {
   position: relative;
   z-index: 0;
-  height: 720px;
+  height: 760px;
   overflow: hidden;
   --tw-bg-opacity: 1;
   background-color: rgb(10 10 10 / var(--tw-bg-opacity));
@@ -114,7 +114,7 @@
 
 .banners-container-slider .page-width {
   position: relative;
-  z-index: 20;
+  z-index: 40;
   display: flex;
   height: 100%;
   align-items: center;
@@ -124,26 +124,87 @@
 
 .banners-container-slider .banner-content {
   position: relative;
-  z-index: 20;
+  z-index: 30;
   display: flex;
   height: 100%;
+  width: 100%;
   align-items: center;
 
     /* Alineación de contenido */
 }
 
---left:is(.banners-container-slider .banner-content) {
+.banner-content--left:is(.banners-container-slider .banner-content) {
   justify-content: flex-start;
   padding-left: 4rem;
 }
 
---center:is(.banners-container-slider .banner-content) {
+.banner-content--left:is(.banners-container-slider .banner-content) .banner-text-container {
+  text-align: left;
+}
+
+.banner-content--left:is(.banners-container-slider .banner-content) .banner-title {
+  text-align: left;
+}
+
+.banner-content--left:is(.banners-container-slider .banner-content) .banner-subtitle-container {
+  justify-content: flex-start;
+  border-left-width: 2px;
+  --tw-border-opacity: 1;
+  border-color: rgb(250 0 20 / var(--tw-border-opacity));
+  padding-left: 2rem;
+  text-align: left;
+}
+
+.banner-content--left:is(.banners-container-slider .banner-content) .banner-button {
+  margin-right: auto;
+}
+
+.banner-content--center:is(.banners-container-slider .banner-content) {
   justify-content: center;
 }
 
---right:is(.banners-container-slider .banner-content) {
+.banner-content--center:is(.banners-container-slider .banner-content) .banner-text-container {
+  text-align: center;
+}
+
+.banner-content--center:is(.banners-container-slider .banner-content) .banner-title {
+  text-align: center;
+}
+
+.banner-content--center:is(.banners-container-slider .banner-content) .banner-subtitle-container {
+  justify-content: center;
+  text-align: center;
+}
+
+.banner-content--center:is(.banners-container-slider .banner-content) .banner-button {
+  margin-left: auto;
+  margin-right: auto;
+}
+
+.banner-content--right:is(.banners-container-slider .banner-content) {
   justify-content: flex-end;
   padding-right: 4rem;
+}
+
+.banner-content--right:is(.banners-container-slider .banner-content) .banner-text-container {
+  text-align: right;
+}
+
+.banner-content--right:is(.banners-container-slider .banner-content) .banner-title {
+  text-align: right;
+}
+
+.banner-content--right:is(.banners-container-slider .banner-content) .banner-subtitle-container {
+  justify-content: flex-end;
+  border-right-width: 2px;
+  --tw-border-opacity: 1;
+  border-color: rgb(250 0 20 / var(--tw-border-opacity));
+  padding-right: 2rem;
+  text-align: right;
+}
+
+.banner-content--right:is(.banners-container-slider .banner-content) .banner-button {
+  margin-left: auto;
 }
 
 /* Contenedor de texto */
@@ -160,7 +221,6 @@
   font-weight: 800;
   text-transform: uppercase;
   line-height: 1.25;
-        font-family: 'Catamaran', sans-serif;
 }
 
 /* Subtítulo con línea */
@@ -168,16 +228,8 @@
 :is(:is(.banners-container-slider .banner-content) .banner-text-container) .banner-subtitle-container {
   margin-bottom: 2rem;
   display: flex;
+  max-width: 20rem;
   align-items: center;
-}
-
-:is(:is(:is(.banners-container-slider .banner-content) .banner-text-container) .banner-subtitle-container) .banner-subtitle-line {
-  margin-right: 1.5rem;
-  height: 5rem;
-  width: 0.25rem;
-  flex-shrink: 0;
-  --tw-bg-opacity: 1;
-  background-color: rgb(250 0 20 / var(--tw-bg-opacity));
 }
 
 :is(:is(:is(.banners-container-slider .banner-content) .banner-text-container) .banner-subtitle-container) .banner-subtitle {
@@ -186,7 +238,6 @@
   font-weight: 300;
   text-transform: uppercase;
   line-height: 1.25;
-          font-family: 'Catamaran', sans-serif;
 }
 
 /* Botón CTA */
@@ -215,35 +266,35 @@
         /* Estilos de botón */
       }
 
---primary:is(:is(:is(.banners-container-slider .banner-content) .banner-text-container) .banner-button) {
+.banner-button--primary:is(:is(:is(.banners-container-slider .banner-content) .banner-text-container) .banner-button) {
   --tw-shadow: 0 10px 15px -3px rgb(0 0 0 / 0.1), 0 4px 6px -4px rgb(0 0 0 / 0.1);
   --tw-shadow-colored: 0 10px 15px -3px var(--tw-shadow-color), 0 4px 6px -4px var(--tw-shadow-color);
   box-shadow: var(--tw-ring-offset-shadow, 0 0 #0000), var(--tw-ring-shadow, 0 0 #0000), var(--tw-shadow);
 }
 
---primary:is(:is(:is(.banners-container-slider .banner-content) .banner-text-container) .banner-button):hover {
+.banner-button--primary:is(:is(:is(.banners-container-slider .banner-content) .banner-text-container) .banner-button):hover {
   --tw-shadow: 0 20px 25px -5px rgb(0 0 0 / 0.1), 0 8px 10px -6px rgb(0 0 0 / 0.1);
   --tw-shadow-colored: 0 20px 25px -5px var(--tw-shadow-color), 0 8px 10px -6px var(--tw-shadow-color);
   box-shadow: var(--tw-ring-offset-shadow, 0 0 #0000), var(--tw-ring-shadow, 0 0 #0000), var(--tw-shadow);
 }
 
---secondary:is(:is(:is(.banners-container-slider .banner-content) .banner-text-container) .banner-button) {
+.banner-button--secondary:is(:is(:is(.banners-container-slider .banner-content) .banner-text-container) .banner-button) {
   border-width: 2px;
   border-color: currentColor;
   background-color: transparent;
 }
 
---secondary:is(:is(:is(.banners-container-slider .banner-content) .banner-text-container) .banner-button):hover {
+.banner-button--secondary:is(:is(:is(.banners-container-slider .banner-content) .banner-text-container) .banner-button):hover {
   background-color: currentColor;
 }
 
---outline:is(:is(:is(.banners-container-slider .banner-content) .banner-text-container) .banner-button) {
+.banner-button--outline:is(:is(:is(.banners-container-slider .banner-content) .banner-text-container) .banner-button) {
   border-width: 2px;
   border-color: currentColor;
   background-color: transparent;
 }
 
---outline:is(:is(:is(.banners-container-slider .banner-content) .banner-text-container) .banner-button):hover {
+.banner-button--outline:is(:is(:is(.banners-container-slider .banner-content) .banner-text-container) .banner-button):hover {
   background-color: currentColor;
   --tw-text-opacity: 1;
   color: rgb(255 255 255 / var(--tw-text-opacity));
@@ -290,11 +341,11 @@
   color: rgb(255 255 255 / var(--tw-text-opacity));
 }
 
---prev:is(:is(.banners-container-slider .slider-controls-container) .slider-controls) {
+.slider-controls--prev:is(:is(.banners-container-slider .slider-controls-container) .slider-controls) {
   left: 0px;
 }
 
---next:is(:is(.banners-container-slider .slider-controls-container) .slider-controls) {
+.slider-controls--next:is(:is(.banners-container-slider .slider-controls-container) .slider-controls) {
   right: 0px;
 }
 
@@ -382,7 +433,7 @@
         :is(:is(.banners-container-slider .banner-slide) .banner-main-image) img {
     width: 100%;
   }
-        --left:is(:is(.banners-container-slider .banner-slide) .banner-content),--center:is(:is(.banners-container-slider .banner-slide) .banner-content),--right:is(:is(.banners-container-slider .banner-slide) .banner-content) {
+        .banner-content--left:is(:is(.banners-container-slider .banner-slide) .banner-content),.banner-content--center:is(:is(.banners-container-slider .banner-slide) .banner-content),.banner-content--right:is(:is(.banners-container-slider .banner-slide) .banner-content) {
     justify-content: center;
     padding-left: 1.5rem;
     padding-right: 1.5rem;
